Page layout nox working properly on large landscape display.  Have disabled overflow hidden as temporary fix

--- a/css/box_selector.css
+++ b/css/box_selector.css
@@ -9661,6 +9661,7 @@ html {
 }
 
 body {
+  overflow: hidden;
   height: 100%;
   width: 100%;
 }
