--- a/css/mandelbrot.css
+++ b/css/mandelbrot.css
@@ -9661,7 +9661,6 @@ html {
 }
 
 body {
-  overflow: hidden;
   height: 100%;
   width: 100%;
 }
